--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/time-type/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-  <script type="module" crossorigin src="/assets/index.f7aae730.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.204608bf.js">
-  <link rel="stylesheet" href="/assets/index.5e7d264e.css">
+  <script type="module" crossorigin src="/time-type/assets/index.f7aae730.js"></script>
+  <link rel="modulepreload" href="/time-type/assets/vendor.204608bf.js">
+  <link rel="stylesheet" href="/time-type/assets/index.5e7d264e.css">
 </head>
   <body>
     <div id="root"></div>
